--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,9 @@ version: 1.0.0
 environment:
   sdk: '>=2.17.6 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  path: ^1.8.0
+  uuid: 3.0.6
 
 dev_dependencies:
   lints: ^2.0.0
